# rawtoaces

./: CMakeLists.txt  README.md  configure.cmake
.github/workflows/: ci.yml
build_scripts/: install_aces_container.bash  install_deps_linux.bash  install_deps_mac.bash  install_deps_windows.bash
cmake/modules/: FindOpenEXR.cmake
data/misc/: CIE_illum_Dxx_comp.json
include/rawtoaces/: mathOps.h  matrix_solver.hpp  spectral_data.hpp  spectral_solver.hpp  spectrum.hpp
src/: CMakeLists.txt
src/core/: CMakeLists.txt  constants.hpp  matrix_solver.cpp  matrix_solver.hpp  metadata.hpp  metadata_solver.cpp  metadata_solver.hpp  spectral_data.hpp  spectral_solver.cpp  spectral_solver.hpp  spectrum.hpp
src/rawtoaces_idt/: CMakeLists.txt  rta.cpp
src/rawtoaces_util/: CMakeLists.txt  acesrender.cpp
src/util/: CMakeLists.txt  cache_base.hpp  rawtoaces_util.cpp  transform_cache.cpp  transform_cache.hpp
src/util/data_adapters/: spectral_loader.cpp  spectral_loader.hpp
tests/: CMakeLists.txt  core_math.cpp  core_metadata.cpp  core_spectral.cpp  test_data.hpp  util_matrix_solver.cpp  util_spectral.cpp
unittest/: CMakeLists.txt  testIDT.cpp  testIllum.cpp  testMisc.cpp  testSpst.cpp  test_spectral.cpp
v1/: CMakeLists.txt  configure.cmake
v1/src/rawtoaces/: CMakeLists.txt
v1/src/rawtoaces_idt/: CMakeLists.txt
v1/src/rawtoaces_util/: CMakeLists.txt
v1/unittest/: CMakeLists.txt  testDNGIdt.cpp  testIDT.cpp  testIllum.cpp  testMisc.cpp  testSpst.cpp
